# SDLRayTracing

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Drawer.cpp  Drawer.hpp  Driver.cpp  Driver.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  SDL_manager.cpp  SDL_manager.hpp  Scene.cpp  Scene.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  constants.hpp  matematical.cpp  matematical.hpp
src/launcher/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  sphereHitTest.cpp  tests.cpp
